--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,11 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
+    "medium-editor": "^5.23.3",
     "nuxt": "^2.4.0",
+    "underscore": "^1.9.1",
+    "vue2-medium-editor": "^1.1.6",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
