--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^2.4.0",
     "underscore": "^1.9.1",
     "vue2-medium-editor": "^1.1.6",
+    "vuetify": "^1.5.7",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
