--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "laravel-echo": "^1.5.3",
     "nuxt": "^2.4.0",
     "underscore": "^1.9.1",
     "vuetify": "^1.5.7",
