--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,8 @@
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "laravel-echo": "^1.5.3",
-    "nuxt": "^2.4.0",
+    "nuxt": "^2.6.2",
+    "service-container": "0.0.11",
     "underscore": "^1.9.1",
     "vuetify": "^1.5.7",
     "vuex": "^3.1.0"
